<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Non translatable-->
    <string name="default_moves_value" translatable="false">0</string>
    <string name="colon" translatable="false">:</string>
    <string name="default_time_setup_hint" translatable="false">00</string>


    <!-- ChessClock Activity -->
    <string name="app_name">Chess Clock</string>
    <string name="foreground_service_started">Chess clock running.</string>
    <string name="dialog_reset_clock">Reset the clock?</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>

    <!-- Settings Activity -->
    <string name="settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_add_new">Add new</string>
    <string name="action_delete">Delete</string>
    <string name="dialog_clock_running_reset">Reset the clock?</string>
    <string name="action_full_screen">Full Screen</string>

    <!-- Settings Fragment -->
    <string name="settings_cab_title_time_controls_selected">selected</string>

    <!-- Time Control Fragment -->
    <string name="action_add_new_stage">Add Stage</string>
    <string name="action_save_time_control">Save</string>
    <string name="time_control">Time Control</string>
    <string name="toast_requesting_time_control_name">Please add a name to save.</string>

    <!-- Time Control Manager -->
    <string name="list_empty_toast_message">List empty. Default list loaded.</string>
    <string name="same_as_player_one">Same as Player One</string>

    <!-- Stage Delete Dialog -->
    <string name="delete_stage_dialog_message">Delete stage?</string>

    <!-- Stage Editor Dialog -->
    <string name="stage_editor_dialog_title">Edit Stage</string>
    <string name="tstage_editor_dialog_set">Set</string>
    <string name="action_cancel">Cancel</string>

    <!-- Time Increment Editor Dialog -->
    <string name="time_increment_editor_dialog_title">Edit Time Increment</string>
    <string name="time_increment_editor_dialog_set">Set</string>
    <string name="radio_delay_title">Delay</string>
    <string name="radio_bronstein_title">Bronstein</string>
    <string name="radio_fischer_title">Fischer</string>

    <!-- Time Picker Dialog -->
    <string name="time_picker_dialog_title">Time</string>
    <string name="time_picker_dialog_set">Set</string>

    <!-- Increment type spinner subtitles -->
    <string name="delay_option_subtitle">The player\'s clock starts after the delay period.</string>
    <string name="bronstein_option_subtitle">Players receive the used portion of the increment at the end of each
		turn.
	</string>
    <string name="fischer_option_subtitle">Players receive the full increment at the end of each turn.</string>

    <!-- Strings for settings buttons -->
    <string name="time_control_player_one">Player One</string>
    <string name="time_control_player_two">Player Two</string>
    <string name="channel_name">Chess Clock</string>
    <string name="channel_description">Chess Clock Main Channel</string>

    <!-- New & not translated-->
    <string name="start">Start</string>
    <string name="time_controls">Time Controls</string>
    <string name="presets">Presets</string>
    <string name="new_time">New Custom Time</string>
    <string name="app_settings">App Settings</string>
    <string name="theme_color">Theme color</string>
    <string name="sound">Sound</string>
    <string name="custom_time">Custom Time</string>
    <string name="x_min">%d min</string>
    <string name="x_sec">%d sec</string>
    <string name="x_min_y_sec">%d min | %2d sec</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="increment">Increment</string>
    <string name="advanced_mode">Advanced mode</string>
    <string name="please_set_time">Please add a time to save.</string>
    <string name="stages">Stages</string>
    <string name="stage_one">Stage One</string>
    <string name="stage_two">Stage Two</string>
    <string name="stage_three">Stage Three</string>
    <string name="moves">Moves</string>
    <string name="value">Value</string>
    <string name="type">Type</string>
    <string name="toast_requesting_time_control_stage">Please add at least one stage for each user.</string>
    <string name="delete_custom_time">Delete custom time?</string>
    <string name="action_keep">Keep</string>
    <string name="game_in_x">Game in %s</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="save_time">Save time</string>
    <string name="adjust_time">Adjust Time</string>
    <string name="moves_x">Moves: %d</string>
    <string name="exit_dialog_message">Are you sure you want to discard new custom time?</string>
    <string name="restore_default_controls">Restore Default Time Controls</string>
    <string name="restore_default_controls_confirmation_message">Are you sure? This will delete any custom time controls you have.</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="delete_all_time_controls_info">The clock requires at least one active time control. Please edit the existing time control or create a new one.</string>
</resources>
