<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@color/toolbar_gray"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="@dimen/margin_standard"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back_arrow_white" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_weight="1"
            android:lines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            tools:text="@string/increment" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/type"
        android:textColor="@color/white_50"
        android:textSize="@dimen/text_size_default" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/delayBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/time_item_height"
        android:background="?selectableItemBackground"
        android:checkMark="@drawable/list_radio_button_selector"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/margin_standard"
        android:singleLine="true"
        android:text="@string/radio_delay_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/bronsteinBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/time_item_height"
        android:background="?selectableItemBackground"
        android:checkMark="@drawable/list_radio_button_selector"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/margin_standard"
        android:singleLine="true"
        android:text="@string/radio_bronstein_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/fisherBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/time_item_height"
        android:background="?selectableItemBackground"
        android:checkMark="@drawable/list_radio_button_selector"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/margin_standard"
        android:singleLine="true"
        android:text="@string/radio_fischer_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/typeDetailsTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/fischer_option_subtitle"
        android:textColor="@color/white_50"
        android:textSize="@dimen/text_size_default" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/margin_standard"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/movesLay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/time_item_height"
        android:layout_marginTop="@dimen/margin_standard"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/margin_standard">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/value"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/default_radius">

            <EditText
                android:id="@+id/minutesEt"
                style="@style/timeInputEditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:nextFocusForward="@id/baseIncrementSecEt" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:text="@string/colon" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/default_radius">

            <EditText
                android:id="@+id/secondsEt"
                style="@style/timeInputEditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:imeOptions="actionDone" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>