<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_standard">

    <EditText
        android:id="@+id/time_control_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/time_item_height"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:lines="1"
        android:paddingHorizontal="@dimen/margin_small"
        android:textColor="@color/white"
        android:textColorHint="@color/white_50"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/baseTimeLay"
        android:layout_width="0dp"
        android:layout_height="@dimen/time_item_height"
        android:layout_marginTop="@dimen/margin_standard"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_control_name">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/default_radius">

            <EditText
                android:id="@+id/baseMinEt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/timeInputEditTextStyle" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:text="@string/colon" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/default_radius">

            <EditText
                android:id="@+id/baseSecEt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/timeInputEditTextStyle" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/baseTimeLay"
        app:layout_constraintWidth_max="@dimen/max_content_width" />

    <LinearLayout
        android:id="@+id/baseIncrementLay"
        android:layout_width="0dp"
        android:layout_height="@dimen/time_item_height"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/increment"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/default_radius">

            <EditText
                android:id="@+id/baseIncrementMinEt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/timeInputEditTextStyle" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:text="@string/colon" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/default_radius">

            <EditText
                android:id="@+id/baseIncrementSecEt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/timeInputEditTextStyle" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/advancedModeLay"
        android:layout_width="0dp"
        android:layout_height="@dimen/time_item_height"
        android:layout_marginTop="@dimen/margin_standard"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/baseIncrementLay"
        app:layout_constraintWidth_max="@dimen/max_content_width">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/advanced_mode"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/advancedModeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_standard"
        android:background="@color/green"
        android:text="@string/action_save_time_control"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!--    old part to verify/remove-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/stages_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="STAGES"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

    </RelativeLayout>


    <ListView
        android:id="@+id/list_stages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:footerDividersEnabled="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/increment_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:text="INCREMENT"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/btn_edit_increment"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/simple_list_item_bg"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/increment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:text="Type"
            android:textColor="@android:color/black"
            android:textSize="@dimen/time_control_list_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/increment_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:text="Fischer, 5 secs"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/time_control_list_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/switch_same_as_player_one_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/same_as_player_one"
            android:textSize="@dimen/stage_list_text_size" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_same_as_player_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:checked="true" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>