<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_large"
        tools:context=".activities.AppSettingsActivity">

        <TextView
            android:id="@+id/themeTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:paddingHorizontal="@dimen/margin_standard"
            android:text="@string/theme_color"
            android:textColor="@color/white_50"
            android:textSize="@dimen/text_size_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="@dimen/max_content_width" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/themesRecycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin_x_small"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/themeTv"
            app:layout_constraintWidth_max="@dimen/max_content_width"
            tools:listitem="@layout/item_theme" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/themesRecycler"
            app:layout_constraintWidth_max="@dimen/max_content_width" />

        <LinearLayout
            android:id="@+id/soundLay"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_standard"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintWidth_max="@dimen/max_content_width">

            <ImageView
                android:id="@+id/soundImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_settings_sound_on"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/settingsBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:layout_weight="1"
                android:ellipsize="end"
                android:paddingHorizontal="@dimen/margin_standard"
                android:singleLine="true"
                android:text="@string/sound"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/soundSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fullScreenLay"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/soundLay"
            app:layout_constraintWidth_max="@dimen/max_content_width">

            <ImageView
                android:id="@+id/fullscreenImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_fullscreen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/settingsBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:layout_weight="1"
                android:ellipsize="end"
                android:paddingHorizontal="@dimen/margin_standard"
                android:singleLine="true"
                android:text="@string/action_full_screen"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fullscreenSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/restoreBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_standard"
            android:foreground="?selectableItemBackgroundBorderless"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullScreenLay"
            app:layout_constraintWidth_max="@dimen/max_content_width">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/add_time_button_bg"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:paddingHorizontal="@dimen/margin_standard"
                android:paddingVertical="@dimen/margin_x_standard"
                android:text="@string/restore_default_controls"
                android:textColor="@color/white_85"
                android:textSize="@dimen/text_size_large" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/versionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:text="Version: 1.0.0 (1)"
            android:textColor="@color/white_50"
            android:textSize="@dimen/text_size_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restoreBtn"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>